--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 .DS_Store
 node_modules/
-/dist
 /public
 *.local
 
 # Log files
+*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
 # Editor directories and files
 .vscode/*
