--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@tiptap/extension-bold": "^2.0.3",
+    "@tiptap/extension-document": "^2.0.3",
+    "@tiptap/extension-paragraph": "^2.0.3",
+    "@tiptap/extension-text": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/vue-3": "^2.0.3",
-    "vue": "^3.2.47"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^5.0.2",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2"
+    "vitest": "^0.32.2",
+    "vue-tsc": "^1.8.1"
   }
 }
