--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "@tiptap/extension-bold": "^2.0.3",
     "@tiptap/extension-document": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
     "@tiptap/extension-text": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
@@ -22,6 +24,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@mdi/js": "^7.2.96",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
