--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@tiptap/extension-bold": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-document": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.3",
+    "@tiptap/extension-history": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-italic": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.3",
     "@tiptap/extension-placeholder": "^2.0.3",
+    "@tiptap/extension-subscript": "^2.0.3",
+    "@tiptap/extension-superscript": "^2.0.3",
     "@tiptap/extension-text": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
@@ -26,9 +34,9 @@
   "devDependencies": {
     "@mdi/js": "^7.2.96",
     "@vitejs/plugin-vue": "^4.2.3",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.3"
   }
 }
